--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^5.22.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
